Added the expand section to planning track section in mgmt

--- a/trakberry/templates/mgmt.html
+++ b/trakberry/templates/mgmt.html
@@ -94,6 +94,16 @@
   <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
   
 
+  <script>
+	function plus_0455(){location.replace("{{request.session.local_toggle}}/plus_0455")}
+	function minus_0455(){location.replace("{{request.session.local_toggle}}/minus_0455")}
+	function plus_9341(){location.replace("{{request.session.local_toggle}}/plus_9341")}
+	function minus_9341(){location.replace("{{request.session.local_toggle}}/minus_9341")}
+	function plus_3050(){location.replace("{{request.session.local_toggle}}/plus_3050")}
+	function minus_3050(){location.replace("{{request.session.local_toggle}}/minus_3050")}
+	function plus_1467(){location.replace("{{request.session.local_toggle}}/plus_1467")}
+	function minus_1467(){location.replace("{{request.session.local_toggle}}/minus_1467")}
+  </script>
 
   <!-- <link rel="stylesheet" href="/static/style_1/grid_kiosk_job_production2.css?{{TCUR}}">    -->
 
@@ -236,7 +246,8 @@
 	}
 </style>
 
-
+{% block style8 %}
+{% endblock %}
 
 </head>
 {% block grid %}
