--- a/trakberry/templates/mgmt_track_week.html
+++ b/trakberry/templates/mgmt_track_week.html
@@ -21,20 +21,33 @@
 
             </tr>
             {% for i in request.session.Total_10R %}
-
+            {% if i.12 > 0 %}
             {% if i.7 = -1 %}
               {% if i.5 = -1 %}
                 <tr>
-                 <td bgcolor="#E6E2E1"><center><b>{{i.1}}({{i.12}})</b></center></td>
+                 <td bgcolor="#E6E2E1"><center>
+                    
+                    <b>{{i.1}}</b></center></td>
                  <td bgcolor="#E6E2E1"><center><b>{{i.2}}</b></center></td>
                 </tr>
               {% else %}
                 <tr>
-                    <td  bgcolor="#E6E2E1" rowspan = {{i.4}}><center><b>{{i.11}}</b></center></td>
-                    <td bgcolor="#E6E2E1"><center><b>{{i.1}}({{i.12}})</b></center></td>
+                    <td  bgcolor="#E6E2E1" rowspan = {{i.4}}>
+                        <b style="margin-left:30%;">{{i.11}}</b> &nbsp;&nbsp;&nbsp;
+                        {% if i.12 = 11 or i.12 = 21 or i.12 = 31 or i.12 = 41 %}
+                        <button  style="background-color: #585858;border-radius: 10px;height:80%;font-size:12px;color:#d8ff49" onclick="plus_{{i.11|slice:"-4:"}}()">+</button>
+                         {% endif %} 
+                         {% if i.12 = 12 or i.12 = 22 or i.12 = 32 or i.12 = 42 %}
+                        <button  style="background-color: #585858;border-radius: 10px;height:80%;font-size:12px;color:#d8ff49" onclick="minus_{{i.11|slice:"-4:"}}()">-</button>
+                         {% endif %} 
+                    </center></td>
+                    <td bgcolor="#E6E2E1"><center>
+                        <b>{{i.1}}</b></center></td>
                     <td bgcolor="#E6E2E1"><center><b>{{i.2}}</b></center></td>
                     {% if i.4 > 0 %}
-                        <td  bgcolor="#E6E2E1" rowspan = {{i.4}}><center><b>{{i.0}}</b></center></td>
+                        <td  bgcolor="#E6E2E1" rowspan = {{i.4}}>
+                            
+                    <center><b>{{i.0}}</b></center></td>
                         <td  bgcolor="#E6E2E1" rowspan = {{i.4}}><center><b>{{i.5}}</b></center></td>
                         <td  bgcolor="#E6E2E1" rowspan = {{i.4}}><center><b>{{i.6}}</b></center></td>
                         <td  bgcolor="#E6E2E1" rowspan = {{i.4}}><center><b>{{i.9}}</b></center></td>
@@ -47,17 +60,24 @@
                 </tr>
                 {% endif %}
 
-
-                {% else %}
+            {% else %}
                 {% if i.5 = -1 %}
                 <tr>
-                    <td bgcolor="#C4C4C4"><center><b>{{i.1}}({{i.12}})</b></center></td>
+                    <td bgcolor="#C4C4C4"><center><b>{{i.1}}</b></center></td>
                     <td bgcolor="#C4C4C4"><center><b>{{i.2}}</b></center></td>
                    </tr>
                  {% else %}
                    <tr>
-                       <td  bgcolor="#C4C4C4" rowspan = {{i.4}}><center><b>{{i.11}}</b></center></td>
-                       <td bgcolor="#C4C4C4"><center><b>{{i.1}}({{i.12}})</b></center></td>
+                       <td  bgcolor="#C4C4C4" rowspan = {{i.4}}>
+                           <b style="margin-left:30%;">{{i.11}}</b>&nbsp;&nbsp;&nbsp;&nbsp;
+                        {% if i.12 = 11 or i.12 = 21 or i.12 = 31 or i.12 = 41 %}
+                        <button  style="background-color: #585858;border-radius: 10px;height:80%;font-size:12px;color:#d8ff49" onclick="plus_{{i.11|slice:"-4:"}}()">+</button>
+                        {% endif %} 
+                        {% if i.12 = 12 or i.12 = 22 or i.12 = 32 or i.12 = 42 %}
+                        <button  style="background-color: #585858;border-radius: 10px;height:80%;font-size:12px;color:#d8ff49" onclick="minus_{{i.11|slice:"-4:"}}()">-</button>
+                        {% endif %} 
+                    </center></td>
+                       <td bgcolor="#C4C4C4"><center><b>{{i.1}}</b></center></td>
                        <td bgcolor="#C4C4C4"><center><b>{{i.2}}</b></center></td>
                        {% if i.4 > 0 %}
                            <td  bgcolor="#C4C4C4" rowspan = {{i.4}}><center><b>{{i.0}}</b></center></td>
@@ -71,12 +91,11 @@
                            {% endif %}
                        {% endif %}
                    </tr>
-
-              {% endif %}
-              {% endif %}
-
+                 {% endif %}
+            {% endif %}
 
 
+            {% endif %}
             {% endfor %}
         </table>
     </div>
