--- a/trakberry/templates/mgmt.html
+++ b/trakberry/templates/mgmt.html
@@ -294,7 +294,8 @@
                     <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-stats"></span> Production<b class="caret"></b></a>
                          <ul class="dropdown-menu multi-level"  style="background-color:rgb(245, 237, 219)" >
                             <li><a href="{{request.session.local_toggle}}/mgmt_track_week">Track the Week<b><mark>(** New ! **)</mark></b></a></li>
-							<li><a href="{{request.session.local_toggle}}/mgmt_production_counts">Production Numbers<b><mark>(** New ! **)</mark></b></a></li>
+							<li><a href="{{request.session.local_toggle}}/mgmt_goals">Enter Targets</a></li>
+							<li><a href="{{request.session.local_toggle}}/mgmt_production_counts">Production Numbers</a></li>
 							<li><a href="#">Production Reports</a></li>
                              <li class="divider"   style="background-color:rgb(192, 178, 178)" ></li> 
                             <li><a href="{{request.session.local_toggle}}/mgmt_production">Production Entries</a></li>
