working on the HR App setup.  Finished login and password change

--- a/trakberry/templates/login/main_login_password_lost.html
+++ b/trakberry/templates/login/main_login_password_lost.html
@@ -8,42 +8,20 @@
 <form action="" method="post">{% csrf_token %}
 <!-- Style my form to [form_css]  -->
 <table>
-<tr><td colspan="2" style="font-size:25px;"><b><u><center>EMAIL PASSWORD</center></b></u></td><tr>
+
+<tr><td colspan="2" style="font-size:18px;background-color: {{request.session.secondary_menu_color}}; color: {{request.session.secondary_text_color}};"><b><center>Password Emailed</center></b></td><tr>	
+
 <tr><td>&nbsp;&nbsp;&nbsp;</td></tr>
-<tr><td><b><u>Login Name</b></u>&nbsp;&nbsp;&nbsp;</td><td>
+<tr><td>{{request.session.login_name}} was just sent an email regarding password information&nbsp;&nbsp;&nbsp;</td><td>
 
 
-<select style="font-size:14px;width:320px;height:30px;" name="login_name" >
-
-<option value="Brad Sproat">Brad Sproat</option>
-<option value="Chris Dufton">Chris Dufton</option>
-<option value="Dave Clark">Dave Clark</option>
-<option value="Dave Milne">Dave Milne</option>
-<option value="Don Barber">Don Barber</option>
-<option value="Frank Ponte">Frank Ponte</option>
-<option value="Karl Edwards">Karl Edwards</option>
-<option value="Ken Frey">Ken Frey</option>
-<option value="Kevin Baker">Kevin Baker</option>
-<option value="Kevin Faubert">Kevin Faubert</option>
-<option value="Mark Phillips">Mark Phillips</option>
-<option value="Matt Ohm">Matt Ohm</option>
-<option value="Mike Clarke">Mike Clarke</option></option>
-<option value="Norm Buuck">Norm Buuck</option>
-<option value="Rick Wurm">Rick Wurm</option>
-<option value="Rob Zylstra">Rob Zylstra</option>
-<option value="Scott Brownlee">Scott Brownlee</option>
-<option value="Scott McMahon">Scott McMahon</option>
-<option value="Steven Koehler">Steven Koehler</option>
-
-
-</select>
 
 </td></tr>
 
 <tr><td>&nbsp;&nbsp;&nbsp;</td></tr>
 
 <tr><td colspan="2" ><center>
-	<input style="background-color: #999999;border-radius: 10px;height:30px;" type="submit" value="&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email Password&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;">
+	<input style="background-color: #999999;border-radius: 10px;height:30px;" type="submit" value="&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;OK&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;">
 
 </center></td></tr>
 
