--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -94,6 +94,7 @@
 										<li><a href="{{request.session.local_toggle}}/maint_mgmt_auto">Maintenance Manager</a></li>
 										<li><a href="{{request.session.local_toggle}}/mgmt">Production Manager</a></li>
 										<li><a href="{{request.session.local_toggle}}/scrap_mgmt">Quality Manager</a></li>
+										<li><a href="{{request.session.local_toggle}}/hr">HR Manager</a></li>
 										<li class="divider"></li> 
 										<li><a href="{{request.session.local_toggle}}/tech_logout">Tech App</a></li>  
 										<li><a href="{{request.session.local_toggle}}/maint">Maintenance App</a></li>  
