modified logins a bit.  Also added all 10R60 to Line Track

--- a/trakberry/templates/main_login_form.html
+++ b/trakberry/templates/main_login_form.html
@@ -15,27 +15,29 @@
 
 <select style="font-size:14px;width:320px;height:30px;" name="login_name" >
 
-<option value="Brad Sproat">Brad Sproat</option>
-<option value="Chris Dufton">Chris Dufton</option>
-<option value="Dave Clark">Dave Clark</option>
-<option value="Dave Milne">Dave Milne</option>
-<option value="Don Barber">Don Barber</option>
-<option value="Jennifer Button">Jennifer Button</option>
-<option value="Karl Edwards">Karl Edwards</option>
-<option value="Ken Frey">Ken Frey</option>
-<option value="Kevin Baker">Kevin Baker</option>
-<option value="Kevin Faubert">Kevin Faubert</option>
-<option value="Mark Phillips">Mark Phillips</option>
-<option value="Matt Ohm">Matt Ohm</option>
-<option value="Mike Clarke">Mike Clarke</option>
-<option value="Pete Murphy">Pete Murphy</option>
-<option value="Rick Wurm">Rick Wurm</option>
-<option value="Rob Zylstra">Rob Zylstra</option>
-<option value="Scott Brownlee">Scott Brownlee</option>
-<option value="Scott Herman">Scott Herman</option>
-<option value="Scott McMahon">Scott McMahon</option>
-<option value="Steven Koehler">Steven Koehler</option>
-
+	<option value="Dave Clark">Dave Clark</option>
+	<option value="Andrew Smith">Andrew Smith</option>
+	<option value="Chris Dufton">Chris Dufton</option>
+	<option value="Dave Godbout">Dave Godbout</option>
+	<option value="Dave Milne">Dave Milne</option>
+	<option value="Dillon Hawthorn">Dillon Hawthorn</option>
+	<option value="Don Barber">Don Barber</option>
+	<option value="Gary Harvey">Gary Harvey</option>
+	<option value="Jason Skillings">Jason Skillings</option>
+	<option value="Julie Reid">Julie Reid</option>
+	<option value="Ken Frey">Ken Frey</option>
+	<option value="Kevin Baker">Kevin Baker</option>
+	<option value="Melinda Spry">Melinda Spry</option>
+	<option value="Patrick Street">Patrick Street</option>
+	<option value="Raid Biram">Raid Biram</option>
+	<option value="Rick Wurm">Rick Wurm</option>
+	<option value="Rob Zylstra">Rob Zylstra</option>
+	<option value="Robin Melville">Robin Melville</option>
+	<option value="Scott Brownlee">Scott Brownlee</option>
+	<option value="Scott Herman">Scott Herman</option>
+	<option value="Scott McMahon">Scott McMahon</option>
+	<option value="Shawn Milley">Shawn Milley</option>	
+	<option value="Stuart Burbidge">Stuart Burbidge</option>
 
 
 </select>
