--- a/trakberry/templates/production/mgmt_users_logins_add.html
+++ b/trakberry/templates/production/mgmt_users_logins_add.html
@@ -60,10 +60,10 @@
 
 <select style="font-size:14px;width:320px;height:30px;margin-left:5%;" name="department">
 	<option selected = "selected">{{request.session.department}}</option>
-  <option value="HR">HR</option>
-	<option value="Maintenance">Maintenance</option>
-	<option value="Maintenance Manager">Maintenance Manager</option>
-	<option value="Production">Production</option>
+  <option value="hr">HR</option>
+	<option value="maint">Maintenance</option>
+	<option value="maint_mgmt">Maintenance Manager</option>
+	<option value="main">Production</option>
 	<option value="Production Manager">Production Manager</option>
 	<option value="Forklift">Forklift</option>
 	<option value="Quality Manager">Quality Manager</option>
