Added 10R60 WIP Track

--- a/trakberry/templates/cell_track_9341.html
+++ b/trakberry/templates/cell_track_9341.html
@@ -795,29 +795,31 @@
 									<font style="font-weight:bolder;font-size:70%;">({{codes_60.2.3}})</font></center><br></td>
 
 				</tr></table></center>
+				
 				<center><table id="mainline"><tr> <!-- OP30 -->
-						<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 30</font>
-							<font style="font-weight:bolder;font-size:85%;"><br>({{op_60.30}})</font></center></td>
-						<td bgcolor={{codes_60.4.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
-							<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes_60.4.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes_60.4.0}}', 'newwindow', 'width=1400, height=600'); return false;">
-								{{codes_60.4.0}}</a></font>
+					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 30</font>
+						<font style="font-weight:bolder;font-size:85%;"><br>({{op_60.30}})</font></center></td>
+						
+					<td bgcolor={{codes_60.3.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
+						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes_60.3.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes_60.3.0}}', 'newwindow', 'width=1400, height=600'); return false;">
+						{{codes_60.3.0}}</a></font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes_60.3.3}})</font></center><br></td>
+						
+					<td bgcolor={{codes_60.5.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
+						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes_60.5.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes_60.5.0}}', 'newwindow', 'width=1400, height=600'); return false;">
+						{{codes_60.5.0}}</a></font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes_60.5.3}})</font></center><br></td>
+					<td bgcolor={{codes_60.6.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
+						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes_60.6.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes_60.6.0}}', 'newwindow', 'width=1400, height=600'); return false;">
+						{{codes_60.6.0}}</a></font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes_60.6.3}})</font></center><br></td>
+	
+						
+					<td bgcolor={{codes_60.4.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
+						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes_60.4.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes_60.4.0}}', 'newwindow', 'width=1400, height=600'); return false;">
+						{{codes_60.4.0}}</a></font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes_60.4.3}})</font></center><br></td></tr></table></center>
 
-							<font style="font-weight:bolder;font-size:70%;">({{codes_60.5.3}})</font></center><br></td>
-						<td bgcolor={{codes_60.5.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
-							<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes_60.5.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes_60.5.0}}', 'newwindow', 'width=1400, height=600'); return false;">
-								{{codes_60.5.0}}</a></font>
-							</font>
-							<font style="font-weight:bolder;font-size:70%;">({{codes_60.6.3}})</font></center><br></td>
-							<td bgcolor={{codes_60.6.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
-								<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes_60.6.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes_60.6.0}}', 'newwindow', 'width=1400, height=600'); return false;">
-									{{codes_60.6.0}}</a></font>
-								</font>
-								<font style="font-weight:bolder;font-size:70%;">({{codes_60.3.3}})</font></center><br></td>
-								<td bgcolor={{codes_60.3.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
-									<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes_60.3.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes_60.3.0}}', 'newwindow', 'width=1400, height=600'); return false;">
-										{{codes_60.3.0}}</a></font>
-									</font>
-									<font style="font-weight:bolder;font-size:70%;">({{codes_60.5.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP40 -->
 					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 40</font>
@@ -897,6 +899,8 @@
 						<font style="font-weight:bolder;font-size:70%;">({{codes_60.14.3}})</font></center><br></td>
 				</tr></table></center>
 
+
+				
 			</div>
 
 
@@ -935,7 +939,59 @@
 				</tr></table></center>
 			</div>
 		  -->
-			
+		
+		  <div class="frames">  <!-- Center Line Production-->
+			<center><table id="noneline"><tr> <!-- OP60 -->
+				<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
+			</tr></table></center>
+			<center><table id="noneline"><tr> <!-- OP10 -->
+				<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
+			</tr></table></center>
+			<center><table id="noneline"><tr> <!-- OP30 -->
+				<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
+			</tr></table></center>
+			<center><table id="noneline"><tr> <!-- OP40 -->
+				<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
+			</tr></table></center>
+			<center><table id="noneline"><tr> <!-- OP50 -->
+				<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
+			</tr></table></center>
+			<center><table id="noneline"><tr> <!-- OP60 -->
+				<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
+			</tr></table></center>
+			<center><table id="noneline"><tr> <!-- OP70 -->
+				<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
+			</tr></table></center>
+			<center><table id="noneline"><tr> <!-- OP80 -->
+				<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
+			</tr></table></center>
+			<center><table id="noneline"><tr> <!-- OP80 -->
+				<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
+			</tr></table></center>
+			<center><table id="noneline"><tr> <!-- OP80 -->
+				<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
+			</tr></table></center>
+			<center><table id="noneline"><tr> <!-- OP80 -->
+				<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
+			</tr></table></center>
+			<center><table id="noneline"><tr> <!-- OP80 -->
+				<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
+			</tr></table></center>
+		</div>
+
+		<div class="framew">  <!-- Center Line Production-->
+			<center><table id="mainline"><tr> 
+				<td bgcolor="#bdb4b3"><br><center><font style="font-weight:bolder;font-size:100%;">Live WIP</font></center><br></td>
+			</tr></table></center>
+			{% for j in wip_60 %}
+				{% if j.0 != '120' %}
+				<center><table id="mainline"><tr> <!-- OP10 -->
+					<td bgcolor="#E8E8E8"><br><center><font style="font-weight:bolder;font-size:100%;">{{j.3}}</font></center><br></td>
+				</tr></table></center>
+				{% endif %}
+			{% endfor %}
+		</div>
+
 		</div>  <!-- main wrapper-->
 		
 
