--- a/trakberry/templates/maint_mgmt.html
+++ b/trakberry/templates/maint_mgmt.html
@@ -71,9 +71,8 @@
 
 {% if request.session.maint_mgmt_main_switch = 1 %}
     <div class="frame2"  bgcolor="{{request.session.main_body_menu_color}}">
-				<div class="head5"><b><font color="#000000" style="font-size: 60%;">Edit Current Maintenance</font></b>
-					&nbsp;&nbsp;
-<br>
+				<div class="head5"><b><font color="#000000" style="font-size: 60%;">Edit</font></b>
+
 					<button style="text-align: left;font-size: 50%;border:0px solid rgb(0, 0, 0);
 					background-color:rgb(158, 158, 158);border-radius: 10px;border:none;outline:none;"
 					type="submit" name="one" value="choose2" /><b><font color="#000000">  OK </font></button>
