--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -174,6 +174,7 @@
 										<li><a href="{{request.session.local_toggle}}/epv_checks_update">EPV Check Update</a></li> -->
 										<li><a href="{{request.session.local_toggle}}/cell_track_9341_mobile">9341 Cell MOBILE</a></li>  
 										<li><a href="{{request.session.local_toggle}}/cell_track_9341">9341 Cell</a></li>  
+										<li><a href="{{request.session.local_toggle}}/wip_update">wip_update</a></li>  
 									</ul>  
 								</li>
 
