--- a/trakberry/templates/scrap_mgmt.html
+++ b/trakberry/templates/scrap_mgmt.html
@@ -33,6 +33,18 @@
 											<li><a href="{{request.session.local_toggle}}/scrap_display_24hr">Last 24hrs</a></li>
 											<li><a href="{{request.session.local_toggle}}/scrap_display_date_pick">Interval</a></li>
 
+											<li class="dropdown-submenu">
+												<a href="#" class="dropdown-toggle" data-toggle="dropdown">Scrap Review <b><mark>(** New ! **)</mark></b></a>
+												<ul class="dropdown-menu" style="background-color:#d3ded4;">
+													<li class="dropdown-submenu">
+	
+														<li><a href="{{request.session.local_toggle}}/gate_review">Gate Alarm Review</a></li>
+														<li><a href="{{request.session.local_toggle}}/gate_alarm_list">Gate Alarm List</a></li>
+
+													</li>
+												</ul>
+											</li>
+
 
 											<li class="dropdown-submenu">
 												<a href="#" class="dropdown-toggle" data-toggle="dropdown">EPV Reports</a>
@@ -59,7 +71,7 @@
 									</li>
 									<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
 
-									<li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-stats"></span>Edits <b><mark>(** New ! **)</mark></b><b class="caret"></b></a>
+									<li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-stats"></span>Edits<b class="caret"></b></a>
 										<ul class="dropdown-menu multi-level"  style="background-color:{{request.session.main_menu_color}}" >
 
 
