--- a/trakberry/templates/scrap_mgmt_login_form.html
+++ b/trakberry/templates/scrap_mgmt_login_form.html
@@ -11,7 +11,7 @@
 		<div class="col-sm-6">
 <form action="" method="post">{% csrf_token %}
 <table>
-	<tr><td colspan="2" style="font-size:25px; background-color: #a4af73;"><b><u><center>LOG IN</center></b></u></td><tr>
+	<tr><td colspan="2" style="font-size:25px;background-color: {{request.session.secondary_menu_color}}; color: {{request.session.secondary_text_color}};"><b><center>{{request.session.app}} Program Log In</center></b></td><tr>
 		<tr</tr>
 		<tr><td><b><u>Login Name</b></u></td><td>
 	<select style="font-size:14px;width:320px;height:30px;" name="login_name" >
