--- a/trakberry/templates/scrap_mgmt_style.html
+++ b/trakberry/templates/scrap_mgmt_style.html
@@ -34,13 +34,17 @@
 		
 <style>
 	*{margin: 0; padding: 0; outline: 0;}
-	table{position: absolute; z-index: 2;  top: 20%; text-align: center; border-collapse: collapse;
+	table{position: absolute; z-index: 2; background-color: {{request.session.main_menu_color}}; top: 20%; text-align: center; border-collapse: collapse;
 	border-spacing: 0; box-shadow: 0 2px 15px rgba( 64,64,64,.7); border-radius: 12px 12px 0 0; overflow: hidden;}
 	table.center{margin-left: 15%; margin-right: 15%; width: 70%;}
 	td , th {padding: 1px 5px;}
-	th{background-color: #a8b4a9; color: #fafafa; font-weight: 200; text-transform: uppercase; text-align: center;}
-	tr{width: 100%; background-color: #fafafa;}
-	tr:nth-child(even){background-color: #dae0c8;}
+	th{background-color: #a8b4a9; color:{{request.session.main_menu_color}}; font-weight: 200; text-transform: uppercase; text-align: center;}
+	tr{width: 100%; background-color: {{request.session.main_menu_color}};}
+	tr:nth-child(even){background-color: {{request.session.main_menu_color}};}
+
+
+
+
 
 	.frame8 {color:black;text-align:left;float:left;width:60%}
 	.frame9{color:black;text-align:center;float:left;width:35%;position:relative;left:5px;}
