--- a/trakberry/templates/test7.html
+++ b/trakberry/templates/test7.html
@@ -4,18 +4,7 @@
 <br><br>
 
 
-<table>
-{% for item in list %}
-<tr>
-{% for x in item %}
-<td bgcolor="#B7CCB6">
-{{x}}</td>
-{% endfor %}
-</tr>
-
-
-{% endfor %}
-</table>
+DONE !
 
 <br>
 
