--- a/trakberry/templates/gate_alarm_list.html
+++ b/trakberry/templates/gate_alarm_list.html
@@ -12,28 +12,29 @@
 {% block content %}
 <font color="#000000" size ="3">
 
-
-
-<form action="" method="post">{% csrf_token %}
-<table>
-	<tr><td colspan="7" style="font-size:20px;background-color: {{request.session.secondary_menu_color}}; color: {{request.session.secondary_text_color}};"><b><center>Gate Alarm List</center></b></td><tr>
+    <table class="center">
+	<tr>
+        <td style="font-size:20px;background-color: {{request.session.secondary_menu_color}}; color: {{request.session.secondary_text_color}};">
+        <button  style="background-color: #CEDB86;border-radius: 10px;height:90%;font-size:10px;color:#000000" onclick="alarm_add()">&nbsp;&nbsp;Add New&nbsp;&nbsp;</button> </center>
+        </td>
+        <td colspan="6" style="font-size:20px;background-color: {{request.session.secondary_menu_color}}; color: {{request.session.secondary_text_color}};"><b><center>Gate Alarm List</center></b></td><tr>
         <tr>
-            <td style="font-size:12px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 3px 17px;"> <b>Part </b></td>
-            <td style="font-size:12px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 3px 17px;"><b> Operation</b> </td>
-            <td style="font-size:12px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 3px 17px;"><b> Category </b></td>
-            <td style="font-size:12px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 3px 17px;"><b> Alarm Qty </b></td>
-            <td style="font-size:12px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 3px 17px;"> <b>Champion</b> </td>
-            <td style="font-size:12px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 3px 17px;"><b> Quality Mgmt</b> </td>
+            <td style="font-size:14px;background-color:#BCBCBC; color:#000000;border: 1px solid black;padding: 3px 27px;"> <b>Part </b></td>
+            <td style="font-size:14px;background-color:#BCBCBC; color:#000000;border: 1px solid black;padding: 3px 27px;"><b> Operation</b> </td>
+            <td style="font-size:14px;background-color:#BCBCBC; color:#000000;border: 1px solid black;padding: 3px 27px;"><b> Category </b></td>
+            <td style="font-size:14px;background-color:#BCBCBC; color:#000000;border: 1px solid black;padding: 3px 27px;"><b> Alarm Qty </b></td>
+            <td style="font-size:14px;background-color:#BCBCBC; color:#000000;border: 1px solid black;padding: 3px 27px;"> <b>Champion</b> </td>
+            <td style="font-size:14px;background-color:#BCBCBC; color:#000000;border: 1px solid black;padding: 3px 27px;"><b> Quality Mgmt</b> </td>
         </tr>
 
     {% for i in request.session.gate_alarm_list %}
     <tr>
-        <td style="font-size:12px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 15px 17px;"> {{i.1}}</td>
-        <td style="font-size:12px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 15px 17px;">{{i.2}} </td>
-        <td style="font-size:12px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 15px 17px;"> {{i.3}}</td>
-        <td style="font-size:12px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 15px 17px;"> {{i.4}}  </td>
-        <td style="font-size:12px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 15px 17px;"> {{i.5}} </td>
-        <td style="font-size:12px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 15px 17px;"> {{i.6}}  </td>
+        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 15px 27px;"> {{i.1}}</td>
+        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 15px 27px;">{{i.2}} </td>
+        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 15px 27px;"> {{i.3}}</td>
+        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 15px 27px;"> {{i.4}}  </td>
+        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 15px 27px;"> {{i.5}} </td>
+        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 15px 27px;"> {{i.6}}  </td>
     </tr>
     {% endfor %}
 
@@ -52,8 +53,7 @@
 -->
 
 
-</table>
-</form>
+</table></center>
 
 </font>
 
