--- a/trakberry/templates/gate_alarm_list.html
+++ b/trakberry/templates/gate_alarm_list.html
@@ -11,13 +11,21 @@
 
 {% block content %}
 <font color="#000000" size ="3">
-
+    <form action="" method="post">{% csrf_token %}
     <table class="center">
 	<tr>
         <td style="font-size:20px;background-color: {{request.session.secondary_menu_color}}; color: {{request.session.secondary_text_color}};">
-        <button  style="background-color: #CEDB86;border-radius: 10px;height:90%;font-size:10px;color:#000000" onclick="alarm_add()">&nbsp;&nbsp;Add New&nbsp;&nbsp;</button> </center>
+
+        <button  style="background-color: #CEDB86;border-radius: 10px;height:90%;font-size:10px;color:#000000" type="submit" name="three" value="edit" /><font color="#000000">&nbsp;&nbsp;Add New&nbsp;&nbsp;</button> </center>
         </td>
-        <td colspan="6" style="font-size:20px;background-color: {{request.session.secondary_menu_color}}; color: {{request.session.secondary_text_color}};"><b><center>Gate Alarm List</center></b></td><tr>
+        <td colspan="6" style="font-size:20px;background-color: {{request.session.secondary_menu_color}}; color: {{request.session.secondary_text_color}};"><b><center>Gate Alarm List</b></center></td>
+        <td style="font-size:20px;background-color: {{request.session.secondary_menu_color}}; color: {{request.session.secondary_text_color}};">
+            {% if request.session.hide_closed = 'no' %}
+            <button  style="background-color: #CEDB86;border-radius: 10px;height:90%;font-size:10px;color:#000000" type="submit" name="four" value="hide" /><font color="#000000">&nbsp;&nbsp;&nbsp;&nbsp;Hide Closed&nbsp;&nbsp;</button> </center>
+            {% else %}
+            <button  style="background-color: #CEDB86;border-radius: 10px;height:90%;font-size:10px;color:#000000" type="submit" name="four" value="show" /><font color="#000000">&nbsp;&nbsp;&nbsp;&nbsp;Show Closed&nbsp;&nbsp;</button> </center>
+            {% endif %}
+        </td><tr>
         <tr>
             <td style="font-size:14px;background-color:#BCBCBC; color:#000000;border: 1px solid black;padding: 3px 27px;"> <b>Part </b></td>
             <td style="font-size:14px;background-color:#BCBCBC; color:#000000;border: 1px solid black;padding: 3px 27px;"><b> Operation</b> </td>
@@ -25,36 +33,93 @@
             <td style="font-size:14px;background-color:#BCBCBC; color:#000000;border: 1px solid black;padding: 3px 27px;"><b> Alarm Qty </b></td>
             <td style="font-size:14px;background-color:#BCBCBC; color:#000000;border: 1px solid black;padding: 3px 27px;"> <b>Champion</b> </td>
             <td style="font-size:14px;background-color:#BCBCBC; color:#000000;border: 1px solid black;padding: 3px 27px;"><b> Quality Mgmt</b> </td>
+            <td style="font-size:14px;background-color:#BCBCBC; color:#000000;border: 1px solid black;padding: 3px 27px;"><b> Status</b> </td>
+            <td style="font-size:14px;background-color:#BCBCBC; color:#000000;border: 1px solid black;padding: 3px 27px;"><b> Date</b> </td>
         </tr>
 
+
     {% for i in request.session.gate_alarm_list %}
+
+    {% if i.7 = "open" %}
     <tr>
-        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 15px 27px;"> {{i.1}}</td>
-        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 15px 27px;">{{i.2}} </td>
-        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 15px 27px;"> {{i.3}}</td>
-        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 15px 27px;"> {{i.4}}  </td>
-        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 15px 27px;"> {{i.5}} </td>
-        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 15px 27px;"> {{i.6}}  </td>
+        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;">
+            <button style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 0px solid black;padding: 15px 27px;"
+            type="submit" name="one" value="{{i.0}}" /><font color="#000000">{{i.1}}</button>
+        </td>
+        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;">
+            <button style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 0px solid black;padding: 15px 27px;"
+            type="submit" name="one" value="{{i.0}}" /><font color="#000000">{{i.2}}</button>
+        </td>
+        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;">
+            <button style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 0px solid black;padding: 15px 27px;"
+            type="submit" name="one" value="{{i.0}}" /><font color="#000000">{{i.3}}</button>
+        </td>
+        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;">
+            <button style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 0px solid black;padding: 15px 27px;"
+            type="submit" name="one" value="{{i.0}}" /><font color="#000000">{{i.4}}</button>
+        </td>
+        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;">
+            <button style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 0px solid black;padding: 15px 27px;"
+            type="submit" name="one" value="{{i.0}}" /><font color="#000000">{{i.5}}</button>
+        </td>
+        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;">
+            <button style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 0px solid black;padding: 15px 27px;"
+            type="submit" name="one" value="{{i.0}}" /><font color="#000000">{{i.6}}</button>
+        </td>
+        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;">
+            <button style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 0px solid black;padding: 15px 27px;"
+            type="submit" name="one" value="{{i.0}}" /><font color="#000000">{{i.7}}</button>
+        </td>
+        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;">
+            <button style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 0px solid black;padding: 15px 27px;"
+            type="submit" name="one" value="{{i.0}}" /><font color="#000000">{{i.8}}</button>
+        </td>
     </tr>
+    {% else %}
+    {% if request.session.hide_closed = 'no' %}
+    <tr>
+        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;">
+            <button style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 0px solid black;padding: 15px 27px;"
+            type="submit" name="one" value="{{i.0}}" /><font color="#A4A4A4">{{i.1}}</button>
+        </td>
+        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;">
+            <button style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 0px solid black;padding: 15px 27px;"
+            type="submit" name="one" value="{{i.0}}" /><font color="#A4A4A4">{{i.2}}</button>
+        </td>
+        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;">
+            <button style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 0px solid black;padding: 15px 27px;"
+            type="submit" name="one" value="{{i.0}}" /><font color="#A4A4A4">{{i.3}}</button>
+        </td>
+        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;">
+            <button style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 0px solid black;padding: 15px 27px;"
+            type="submit" name="one" value="{{i.0}}" /><font color="#A4A4A4">{{i.4}}</button>
+        </td>
+        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;">
+            <button style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 0px solid black;padding: 15px 27px;"
+            type="submit" name="one" value="{{i.0}}" /><font color="#A4A4A4">{{i.5}}</button>
+        </td>
+        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;">
+            <button style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 0px solid black;padding: 15px 27px;"
+            type="submit" name="one" value="{{i.0}}" /><font color="#A4A4A4">{{i.6}}</button>
+        </td>
+        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;">
+            <button style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 0px solid black;padding: 15px 27px;"
+            type="submit" name="one" value="{{i.0}}" /><font color="#A4A4A4">{{i.7}}</button>
+        </td>
+        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;">
+            <button style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 0px solid black;padding: 15px 27px;"
+            type="submit" name="one" value="{{i.0}}" /><font color="#A4A4A4">{{i.8}}</button>
+        </td>
+    </tr>
+    {% endif %}
+
+    {% endif %}
     {% endfor %}
 
-<!--
-<tr><td><b><u>Old Password</b></u>&nbsp;&nbsp;&nbsp;</td><td><input style="font-size:14px;width:320px;height:30px;" type="password" name="old_pwd"></td></tr>
-<tr><td>&nbsp;&nbsp;&nbsp;</td></tr>
-<tr><td><b><u>New Password</b></u>&nbsp;&nbsp;&nbsp;</td><td><input style="font-size:14px;width:320px;height:30px;" type="password" name="new_pwd"></td></tr>
-<tr><td>&nbsp;&nbsp;&nbsp;</td></tr>
-<tr><td><b><u>Retype New Password</b></u>&nbsp;&nbsp;&nbsp;</td><td><input style="font-size:14px;width:320px;height:30px;" type="password" name="new_pwd_2"></td></tr>
-<tr><td>&nbsp;&nbsp;&nbsp;</td></tr>
-<tr><td colspan="2" ><center>
-	<input style="background-color: #999999;border-radius: 10px;height:30px;" type="submit" name="button1" value="&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Enter&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;">
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-</center></td></tr>
--->
 
 
 </table></center>
-
+</form>
 </font>
 
 
