--- a/trakberry/templates/kiosk/scrap_mgmt_style.html
+++ b/trakberry/templates/kiosk/scrap_mgmt_style.html
@@ -65,6 +65,14 @@
 		transform: translateY(8px);
 	}
 </style>
+
+<script>
+	function myFunction() {
+			document.querySelectorAll("input[type=submit]")[0].click();
+	}
+</script>
+
+
 <!-- {% block grid %} -->
 	<!-- Include Styling for Buttons and Frames -->
 	<!-- <link rel="stylesheet" href="/static/style_1/grid_kiosk_main2.css?{{request.session.TCUR}}"> -->
