working on Scrap Reducer

--- a/trakberry/templates/gate_alarm_list_add.html
+++ b/trakberry/templates/gate_alarm_list_add.html
@@ -31,32 +31,44 @@
             <td style="font-size:14px;background-color:#BCBCBC; color:#000000;border: 1px solid black;padding: 3px 27px;"><b> Quality Mgmt</b> </td>
         </tr>
 
+        <tr>
+			<td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 5px 17px;">
+				<select id="part" style="font-size:14px;background-color:#D5D5D5;border: 1px solid #D5D5D5;text-align:center;"
+					 onchange="myFunction();"  list="browsers" name="part" type="text" {{request.session.gate_entry1}}>	
+						<option value="0" selected disabled>{{request.session.gate_part}}</option>
+							{% for item in request.session.list_A %}
+								<option value="{{item.1}}">{{item.1}}</option>
+							{% endfor %}
+				</select>
+            </td>
+            <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 5px 17px;">
+                <select id="operation" style="font-size:14px;background-color:#D5D5D5;border: 1px solid #D5D5D5;text-align:center;"
+                    onchange="myFunction();"  list="browsers" name="operation" type="text" {{request.session.gate_entry2}}>	
+                        <option value="0" selected disabled>{{request.session.gate_operation}}</option>
+                           {% for item in request.session.list_A %}
+                             <option value="{{item.0}}">{{item.0}}</option>
+                            {% endfor %}
+                 </select>
+            </td>
 
-    <tr>
-				<td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 5px 17px;">
-					
-					<select id="part" style="font-size:14px;background-color:#D5D5D5;border: 1px solid #D5D5D5;text-align:center;"
-					 onchange="myFunction();"  list="browsers" name="part" type="text">	
-							<option value="0" selected disabled>{{request.session.scrap_category}}</option>
-								{% for item in request.session.part_list %}
-									<option value="{{item.1}}">{{item.1}}</option>
-								{% endfor %}
-					</select>
-        </td>
-        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 5px 17px;">
-            <input style="font-size:14px;background-color:#D5D5D5;border: 1px solid #D5D5D5;text-align:center;" value=""  name="operation" type="text">
-        </td>
+            <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 5px 17px;">
+                <select id="category" style="font-size:14px;background-color:#D5D5D5;border: 1px solid #D5D5D5;text-align:center;"
+                    onchange="myFunction();"  list="browsers" name="category" type="text" {{request.session.gate_entry3}}>	
+                        <option value="0" selected disabled>{{request.session.gate_category}}</option>
+                           {% for item in request.session.list_A %}
+                             <option value="{{item.1}}">{{item.1}}</option>
+                            {% endfor %}
+                 </select>
+            </td>
+
         <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 5px 17px;"> 
-            <input style="font-size:14px;background-color:#D5D5D5;border: 1px solid #D5D5D5;text-align:center;" value=""  name="category" type="text">
-        </td>
-        <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 5px 17px;"> 
-            <input style="font-size:14px;background-color:#D5D5D5;border: 1px solid #D5D5D5;text-align:center;" value=""  name="qty" type="text">
+            <input style="font-size:14px;background-color:#D5D5D5;border: 1px solid #D5D5D5;text-align:center;" value=""  name="qty" type="text"  {{request.session.gate_entry4}}>
         </td>
         <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 5px 17px;">  
-            <input style="font-size:14px;background-color:#D5D5D5;border: 1px solid #D5D5D5;text-align:center;" value=""  name="champion" type="text">
+            <input style="font-size:14px;background-color:#D5D5D5;border: 1px solid #D5D5D5;text-align:center;" value=""  name="champion" type="text"  {{request.session.gate_entry5}}>
         </td>
         <td style="font-size:14px;background-color:#D5D5D5; color:#000000;border: 1px solid black;padding: 5px 17px;">   
-            <input style="font-size:14px;background-color:#D5D5D5;border: 1px solid #D5D5D5;text-align:center;" value=""  name="qa" type="text">
+            <input style="font-size:14px;background-color:#D5D5D5;border: 1px solid #D5D5D5;text-align:center;" value=""  name="qa" type="text"  {{request.session.gate_entry6}}>
         </td>
     </tr>
 
