--- a/trakberry/templates/scrap_mgmt.html
+++ b/trakberry/templates/scrap_mgmt.html
@@ -33,6 +33,9 @@
 											<li><a href="{{request.session.local_toggle}}/scrap_display_24hr">Last 24hrs</a></li>
 											<li><a href="{{request.session.local_toggle}}/scrap_display_date_pick">Interval</a></li>
 
+
+<!--  NEW GATE ALARM MENU
+
 											<li class="dropdown-submenu">
 												<a href="#" class="dropdown-toggle" data-toggle="dropdown">Scrap Review <b><mark>(** New ! **)</mark></b></a>
 												<ul class="dropdown-menu" style="background-color:#d3ded4;">
@@ -44,6 +47,9 @@
 													</li>
 												</ul>
 											</li>
+
+
+    UN COMMENT NEW GATE ALARM MENU   -->
 
 
 											<li class="dropdown-submenu">
